<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Yamba! (Gr05) [English]</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_status">StatusActivity</string>
    <string name="titleStatus">Update Status</string>
    <string name="hintText">Please write your 140-character status</string>
    <string name="buttonUpdate">Update!</string>
    <string name="action_settings">Settings</string>
    <string name="counterInitValue">0</string>
    <string name="titleUsername">Username</string>
    <string name="summaryUsername">Please enter your username</string>
    <string name="titlePassword">Password</string>
    <string name="summaryPassword">Please enter your password</string>
    <string name="titleApiRoot">API Root</string>
    <string name="summaryApiRoot">URL of Root API for your service</string>
    <string name="titlePrefs">Preferences</string>
    <string name="titleItemPrefs">Configuration</string>
	<string name="titleServiceStop">Stop Service</string>
	<string name="titleServiceStart">Start Service</string>
	<string name="titleTimeline">Timeline</string>
	<string name="Slashdot">User</string>
	<string name="minago">Time</string>
	<string name="Firefox">Status</string>
	<string name="titlePurge">Purge Data</string>
    <string name="msgAllDataPurged">All data has been purged</string>
    <string name="msgSetupPrefs">Please enter your username, password and server to use</string>
    <string name="send_timeline_notifications_permission_label">Sends Timeline Notifications</string>
    <string name="send_timeline_notifications_permission_description">Allow this application to send timeline notifications to other applications</string>
    <string name="receive_timeline_notifications_permission_label">Receive Timeline Notifications</string>
    <string name="receive_timeline_notifications_permission_description">Allow this application to receive timeline
    notifications from other applications</string>
    <string name="WidgetIconDescription">Widget Icon</string>
    <string name="msgLastTimelineUpdate">Yamba Widget</string>
    
    <string name="titleProvider">Provider</string>
    <string name="summaryProvider">Summary Provider</string>  
    <string name="summaryUpdaterInterval">Summary Updater Interval</string>
    <string name="titleUpdaterInterval">Updater Interval</string>
    <string name="titleRefresh">Refresh</string>
    <string name="msgNotificationTitle">New Yamba Status Updates</string>
    <string name="msgNotificationMessage">You\'ve got 1 new status update</string>    
    
    
    <string-array name="providers">
		<item>None, please</item>
		<item>GPS via satellites!</item>
		<item>Mobile Network will do</item>
	</string-array>
	<string-array name="providerValues">
		<item>NONE</item>
		<item>gps</item>
		<item>network</item>
	</string-array>
	
	<string-array name="interval">
		<item>Never</item>
		<item>Ten Seconds</item>
		<item>A Minute</item>
		<item>Fifteen minutes</item>
		<item>Half hour</item>
		<item>An hour</item>
		<item>Half day</item>
		<item>Day</item>
	</string-array>

	<string-array name="intervalValues">
		<item>0</item>
		<item>10000</item>
		<item>60000</item>
		<item>900000</item>
		<item>1800000</item>
		<item>3600000</item>
		<item>43200000</item>
		<item>86400000</item>
	</string-array>
    
</resources>