<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <EditTextPreference android:title="@string/titleUsername" android:key="username" android:summary="@string/summaryUsername"/>
    <EditTextPreference android:title="@string/titlePassword" android:key="password" android:summary="@string/summaryPassword" android:password="true"/>
    <EditTextPreference android:title="@string/titleApiRoot" android:summary="@string/summaryApiRoot" android:key="apiRoot"/>
	<ListPreference android:title="@string/titleProvider" android:summary="@string/summaryProvider" 
	    android:key="provider" 
	    android:entryValues="@array/providerValues" 
	    android:entries="@array/providers" />
	<ListPreference android:entryValues="@array/intervalValues"
		android:summary="@string/summaryUpdaterInterval"
		android:title="@string/titleUpdaterInterval"
		android:entries="@array/interval" android:key="interval" />

</PreferenceScreen>