<?xml version="1.0" encoding="utf-8"?>
<!--  Main Layout of Status Activity -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >
	
    <!-- Title TextView -->
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="30sp"
        android:layout_margin="10dp"
        android:text="@string/titleStatus"
        android:textColor="@android:color/white"/>
    
    <!-- Text Counter Textview -->
	<TextView android:layout_width="wrap_content"
	android:layout_height="wrap_content" android:layout_gravity="right"
	android:id="@+id/textCount" android:text="@string/counterInitValue"
	android:layout_marginRight="10dp" />
    
    <!-- Status EditText -->
	<EditText android:layout_width="fill_parent"
	android:layout_height="0dip" android:layout_weight="1"
	android:hint="@string/hintText" android:id="@+id/editText"
	android:gravity="top|center_horizontal"
	android:background="#cfff"/>
	
	<Button 
	    android:id="@+id/buttonUpdate"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center_horizontal"
	    android:text="@string/buttonUpdate"
	    android:textSize="20sp"/>

</LinearLayout>